RESOLVED FIXED197361
Crash when running test wpt/tests/element_click/bubbling.py::test_element_disappears_during_click
https://bugs.webkit.org/show_bug.cgi?id=197361
Summary Crash when running test wpt/tests/element_click/bubbling.py::test_element_dis...
Devin Rousso
Reported 2019-04-28 22:48:07 PDT
.
Attachments
Patch (3.91 KB, patch)
2019-04-28 22:50 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2019-04-28 22:48:25 PDT
Devin Rousso
Comment 2 2019-04-28 22:50:39 PDT
Blaze Burg
Comment 3 2019-04-30 16:54:08 PDT
Comment on attachment 368442 [details] Patch r=me This may need to be rewritten a bit in my IVCP patch, but this is a good improvement for now.
WebKit Commit Bot
Comment 4 2019-04-30 17:12:56 PDT
Comment on attachment 368442 [details] Patch Clearing flags on attachment: 368442 Committed r244814: <https://trac.webkit.org/changeset/244814>
WebKit Commit Bot
Comment 5 2019-04-30 17:12:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.