Crash when running test wpt/tests/element_click/bubbling.py::test_element_disappears_during_click https://bugs.webkit.org/show_bug.cgi?id=197361 <rdar://problem/49861407>

Reviewed by Brian Burg.

Don't assume that all elements have client rects (e.g. `getClientRects`). If the container
element isn't visible, then the child won't be either.

* UIProcess/Automation/SimulatedInputDispatcher.cpp:
(WebKit::SimulatedInputDispatcher::resolveLocation):
(WebKit::SimulatedInputDispatcher::transitionInputSourceToState):
* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::viewportInViewCenterPointOfElement):


Canonical link: https://commits.webkit.org/211627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244814 268f45cc-cd09-0410-ab3c-d52691b4dbfc